--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,3 +11,5 @@ thiserror = "^1.0.57"
 [dev-dependencies]
 rstest = "^0.18.2"
 rstest_reuse = "^0.6.0"
+serde = "^1.0.197"
+serde_json = "^1.0.114"
