--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 thiserror = "^1.0.57"
+serde = { version = "1.0.197", features = ["derive"] }
+derive_setters = "0.1.6"
+serde_json = "^1.0.114"
 
 [dev-dependencies]
 rstest = "^0.18.2"
 rstest_reuse = "^0.6.0"
-serde = "^1.0.197"
-serde_json = "^1.0.114"
