--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,7 @@ thiserror = "^1.0.57"
 serde = { version = "1.0.197", features = ["derive"] }
 derive_setters = "0.1.6"
 serde_json = "^1.0.114"
+serde_repr = "^0.1.18"
 
 [dev-dependencies]
 rstest = "^0.18.2"
