--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 derive_setters = "0.1.6"
 serde_json = "^1.0.114"
 serde_repr = "^0.1.18"
+rust_decimal = { version = "^1.34.3", features = ["serde_json"] }
 
 [dev-dependencies]
 rstest = "^0.18.2"
