--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.77"
 thiserror = "^1.0.57"
 serde = { version = "1.0.197", features = ["derive"] }
 derive_setters = "0.1.6"
@@ -13,6 +14,10 @@ serde_json = "^1.0.114"
 serde_repr = "^0.1.18"
 serde_with = "^3.6.1"
 rust_decimal = { version = "^1.34.3", features = ["serde_json", "serde-float"] }
+tokio = { version = "^1.36.0", features = ["rt", "sync"] }
+tokio-tungstenite = { version = "^0.21.0", features = ["rustls"] }
+url = "^2.5.0"
+futures-util = "^0.3.30"
 
 [dev-dependencies]
 rstest = "^0.18.2"
