--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -22,3 +22,4 @@ futures-util = "^0.3.30"
 [dev-dependencies]
 rstest = "^0.18.2"
 rstest_reuse = "^0.6.0"
+tokio = { version = "^1.36.0", features = ["full", "test-util"] }
