Add XtbClient with builder pattern and error handling
This commit introduces the `XtbClient` structure along with a builder pattern implemented in `XtbClientBuilder`. This allows customizable and detailed error handling through the use of the `XtbClientBuilderError` enum. The `log` dependency is also added to the `Cargo.toml` file.
The `rstest_reuse` statements have been reshuffled for better ordering in the `lib.rs` file. Additionally, the `client.rs` file is added to the module hierarchy.

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,6 +19,7 @@ tracing = "0.1.40"
 tokio-tungstenite = { version = "^0.21.0", features = ["rustls"] }
 url = "^2.5.0"
 futures-util = "^0.3.30"
+log = "0.4.21"
 
 [dev-dependencies]
 rstest = "^0.18.2"
