--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,9 +14,9 @@ serde_json = "^1.0.114"
 serde_repr = "^0.1.18"
 serde_with = "^3.6.1"
 rust_decimal = { version = "^1.34.3", features = ["serde_json", "serde-float"] }
-tokio = { version = "^1.36.0", features = ["rt", "sync"] }
+tokio = { version = "^1.36.0", features = ["rt", "sync", "rt-multi-thread", "macros"] }
 tracing = "0.1.40"
-tokio-tungstenite = { version = "^0.21.0", features = ["rustls"] }
+tokio-tungstenite = { version = "^0.21.0", features = ["rustls-tls-native-roots"] }
 url = "^2.5.0"
 futures-util = "^0.3.30"
 log = "0.4.21"
@@ -25,3 +25,5 @@ log = "0.4.21"
 rstest = "^0.18.2"
 rstest_reuse = "^0.6.0"
 tokio = { version = "^1.36.0", features = ["full", "test-util"] }
+dotenvy = "^0.15.7"
+tracing-subscriber = "^0.3.18"
